<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intuition Trainer for Minesweeper</string>
    
    <string name="mode">Mode:&#160;</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="custom">Custom</string>
    <string name="study">Study</string>
    <string name="timeout">Timeout:&#160;</string>
    <string name="timeoutdefault">2000</string>
    <string name="timeouthint">100~10000</string>
    <string name="timeunit">ms</string>
    <string name="round">Round(s):&#160;</string>
    <string name="rounddefault">30</string>
    <string name="roundhint">1~9999999</string>
    <string name="quitafter">Game over when</string>
    <string name="quitafterdefault">40</string>
    <string name="quitafterhint">0~100</string>
    <string name="quitafter_tail">% failed or rounds over</string>
    <string name="exit">Quit</string>
    <string name="help">Help</string>
    <string name="go">Start</string>
    <string name="timeouttips">Timeout must be between</string>
    <string name="roundtips">Round(s) must be between</string>
    <string name="quittips">Game over condition must be between</string>
    <string name="extramode">Enhanced Mode</string>
    <string name="error">Error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="close">Close</string>
    <string name="summary">Summary</string>
    <string name="correct_rate">Correct Rate:&#160;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enhanced_mode">Enhanced</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="unknown">Unknown</string>
    <string name="help_info">This is a freeware that used to improve the minesweeper player\'s capability of judgement.\n\nPresent by Crazyks, 2013.\n\nThe rule is very simple.\nYou should make a decision about the board is clear or not in a limited time.\nIf timeout, the round will be considered as lose and get into the next round.\nIf all the rounds are finished and the wrong rate is not over the limit, you win.\nOtherwise, you lose.\n\nThere are 5 modes that you can choose.\n*Easy: timeout limit is 2000 milliseconds.\n*Normal: timeout limit is 1200 milliseconds.\n*Hard: timeout limit is 800 milliseconds.\n*Custom: you can change the timeout limit.\n*Study: no timeout limit.\n\nBesides, there is a switch to set the \"Enhanced\" status.\nIf \"Enhanced\" is on, you must judge if the whole board(7x7) is clear or not.\nIf \"Enhanced\" is off, you should only judge the center board(3x3) is clear or not.\n\nBTW, Only after \"Enhanced\" is chosen, you can choose \"Mark It\".\nWhen \"Mark It\" is chosen and the current board is not clear. After you made a right choice about the board is clear or not, you must mark the safety blocks before you get into the next round.\nIt\'s considered as a right choice if all the safety blocks are marked, otherwise, it will be considered as a wrong one.\n\nGood luck!</string>
    <string name="competition">Competition:&#160;</string>
    <string name="right_summary">Right:&#160;</string>
    <string name="wrong_summary">Wrong:&#160;</string>
    <string name="incompleted_summary">Incompleted:&#160;</string>
    <string name="extra">Extra:&#160;</string>
    <string name="pause_on_wrong_choice">Pause OnErr</string>
    <string name="next">You made a wrong choice. Click me to enter the next round.</string>
    <string name="next2">If all the safety blocks are marked, click me to enter the next round.</string>
    <string name="about">About</string>
    <string name="about_info">Intuition Trainer for Minesweeper\n\nAuthor: crazyks\nEmail: crazyks@yeah.net\nShenzhen, Guangdong, China\n2013.03</string>
    <string name="including">including</string>
    <string name="missed">missed</string>
    <string name="achieve">ACHV</string>
    <string name="well_palyed">Well played</string>
    <string name="well_palyed_summary">100% correct in any non-study mode with 100 rounds at least for the 1st time.</string>
    <string name="wide_exp">Wide experience</string>
    <string name="wide_exp_summary">Met all numbers in the board center and made the right choices in any non-study mode.</string>
    <string name="loser">The Impossible Mission</string>
    <string name="loser_summary">Lost 10,000 consecutive games.</string>
    <string name="diy_life">DIY life</string>
    <string name="diy_life_summary">Completed the custom mode 100 times.</string>
    <string name="beginner">Beginner</string>
    <string name="beginner_summary">100% correct in the easy mode with 30 rounds at least before you got Practitioner or Expert.</string>
    <string name="practitioner">Practitioner</string>
    <string name="practitioner_summary">100% correct in the normal mode with 40 rounds at least before you got Expert.</string>
    <string name="expert">Expert</string>
    <string name="expert_summary">100% correct in the hard mode with 50 rounds at least.</string>
    <string name="sniper">Sniper</string>
    <string name="sniper_summary">Solved 242 unsolved board in any non-study mode at least.</string>
    <string name="daily_practice">Daily practice</string>
    <string name="daily_practice_summary">Played games every day in last week.</string>
    <string name="curiosity">Curiosity</string>
    <string name="curiosity_summary">Found all the unmentioned things.</string>
    <string name="mark">Mark It</string>
    <string name="notice">Notice</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="file_not_found">No DATA FILE found, do you want to create it?</string>
    <string name="file_damaged">Your DATA FILE was damaged, do you want to create a new one?</string>
    <string name="congratulation">Congratulations!</string>
    <string name="congratulation_msg">You win a new achievement:\n</string>
    <string name="congratulation_msgs">You win the following new achievements:\n</string>
    <string name="no_sdcard">No TF/SD card found!</string>
    <string name="press_me">Press me to enter the next round</string>

</resources>