<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <TextView
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/mode"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/level_config"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_toRightOf="@+id/mode"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />

        <RadioButton
            android:id="@+id/custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom" />

        <RadioButton
            android:id="@+id/study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/timeout_config"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/level_config"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5.8"
            android:singleLine="true"
            android:text="@string/timeout"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.5"
            android:hint="@string/timeouthint"
            android:inputType="numberSigned"
            android:text="@string/timeoutdefault" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:singleLine="true"
            android:text="@string/timeunit"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/round_config"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/timeout_config"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5.8"
            android:singleLine="true"
            android:text="@string/round"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.5"
            android:hint="@string/roundhint"
            android:inputType="numberSigned"
            android:text="@string/rounddefault" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quit_config"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/round_config"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5.8"
            android:singleLine="true"
            android:text="@string/quitafter"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7.5"
            android:hint="@string/quitafterhint"
            android:inputType="numberSigned"
            android:text="@string/quitafterdefault" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:singleLine="true"
            android:text="@string/quitafter_tail"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/extra_text"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/quit_config"
        android:gravity="center_vertical"
        android:text="@string/extra"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/extra_config"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/quit_config"
        android:layout_toRightOf="@+id/extra_text"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enhanced_mode"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        
        <CheckBox
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_on_wrong_choice"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        
        <CheckBox
            android:id="@+id/mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/extra_config"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/go"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/help"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/achv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/achieve"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/exit"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/action_config"
        android:gravity="bottom|center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>